Change folder name and minimize html file

--- a/index.html
+++ b/index.html
@@ -1,136 +1,2 @@
-<!DOCTYPE html>
-<!-- saved from url=(0029)https://www.facreative.co.uk/ -->
-<html>
 
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="FA Creative">
-    <meta property="og:title" content="FA Creative &amp; Technologies Ltd">
-    <meta property="og:description"
-        content="Let us help you to improve your digital perspectives. Just think about your digital view in world wide web.">
-    <meta property="og:url" content="https://www.facreative.co.uk">
-    <meta property="og:image" content="https://www.facreative.co.uk/content/images/logo-share.png">
-    <meta property="og:type" content="website">
-    <meta property="fb:app_id" content="1652823298375162">
-    <link rel="apple-touch-icon" sizes="180x180" href="https://www.facreative.co.uk/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="https://www.facreative.co.uk/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="https://www.facreative.co.uk/favicon-16x16.png">
-    <link rel="manifest" href="https://www.facreative.co.uk/site.webmanifest">
-    <link rel="mask-icon" href="https://www.facreative.co.uk/safari-pinned-tab.svg" color="#5bbad5">
-    <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="theme-color" content="#ffffff">
-    <title>FA Creative &amp; Technologies</title>
-    <link href="d/css" rel="stylesheet">
-    <link href="d/cssx" rel="stylesheet">
-    <link rel="stylesheet" href="d/main.css">
-    <link rel="stylesheet" href="d/animate.min.css">
-</head>
-
-<body>
-    <header class="header">
-        <div class="content"> <a href="https://www.facreative.co.uk/#!" class="logo"> <img
-                    src="d/logo-share.png" width="100" id="jsLogo"> </a>
-            <nav class="header-nav"> <a href="https://www.facreative.co.uk/#!" class="nav-item"
-                    data-target="about">About Us</a> <a href="https://www.facreative.co.uk/#!" class="nav-item"
-                    data-target="ourworks">Our Works</a> <a href="https://www.facreative.co.uk/#!" class="nav-item"
-                    data-target="contact">Get in Touch</a> </nav>
-        </div>
-    </header>
-    <section class="section" id="first">
-        <div class="content first-section">
-            <div class="first-section-left">
-                <div class="text-box">
-                    <h1>FA CREATIVE &amp; TECHNOLOGIES</h1>
-                    <div class="hashtag-text">#CREATIVETHINGS</div>
-                    <div class="big-title"> Let us help you<br> to improve your<br> digital perspectives. </div>
-                    <div class="sub-title">Just think about your digital view in world wide web.</div><a
-                        href="mailto:hello@facreative.co.uk" class="link">LET’S DISCUSS</a>
-                </div>
-            </div>
-            <div class="first-section-right">
-                <div class="chevron"></div>
-                <div class="chevron"></div>
-                <div class="chevron"></div>
-            </div>
-        </div>
-    </section>
-    <section class="section " id="second" data-href="about">
-        <div class="content second-section">
-            <div class="section-title"> You need a product.<br> So you need a way guide. </div>
-            <div class="second-column-box">
-                <div class="second-item-box"> <img src="d/second-icon-1.png">
-                    <div class="second-item-title"> Meet our services. </div>
-                    <div class="second-item-desc"> Every product we created increases<br> durability, quality,
-                        availability and yet<br> decreases all costs. Just one step<br> forward. </div>
-                </div>
-                <div class="second-item-box"> <img src="d/second-icon-3.png">
-                    <div class="second-item-title"> Do you need any asistance? </div>
-                    <div class="second-item-desc"> We know how to do so with our best<br> practices and the speed our
-                        finger-<br> print keepsakes are crafted.<br><br> Ah yes, we do it. </div>
-                </div>
-                <div class="second-item-box"> <img src="d/second-icon-2.png">
-                    <div class="second-item-title">Improvement is welcome</div>
-                    <div class="second-item-desc"> You already have a project and <br> need any improvement? Ah
-                        okay,<br> let’s do it right now!<br><br> Let’s see the sun rise! </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section class="section fp-auto-height" id="third" data-href="ourworks">
-        <div class="content third-section">
-            <div class="third-title"> What we have done for<br> our precious friends. </div>
-            <div class="third-item-box"> <a href="https://www.yubithebot.com/en" target="_blank" class="third-item">
-                    <img src="d/yubi.png">
-                    <div class="third-item-mask">Conversational Interfaces</div>
-                </a> <a href="https://www.facreative.co.uk/#!" class="third-item"> <img
-                        src="d/third-item-2.png">
-                    <div class="third-item-mask">Native Application</div>
-                </a> <a href="https://www.facreative.co.uk/#!" class="third-item"> <img
-                        src="d/third-item-3.png">
-                    <div class="third-item-mask">Printing</div>
-                </a> <a href="https://www.facreative.co.uk/#!" class="third-item"> <img
-                        src="d/third-item-4.png">
-                    <div class="third-item-mask">Logo Design</div>
-                </a> </div>
-        </div>
-    </section>
-    <footer class="footer section" data-href="contact">
-        <div class="content">
-            <div class="footer-title"> Tell us your needs.<br> We’d like to know and help you. </div>
-            <div class="footer-desc"> We have hard-working instincts to find the beyond of the best.Imagine the most
-                usable<br> and yet the most rock-solid mobile application: We are building it naturally </div><a
-                href="mailto:hello@facreative.co.uk" class="footer-link">Write Us</a>
-        </div>
-        <div class="footer-seperator"></div>
-        <div class="content">
-            <div class="footer-bottom">
-                <div class="footer-company-name"> FA Creative &amp; Technologies </div>
-                <div class="footer-address"> 3rd Floor 86-90 Paul Street, <br>London EC2A 4NE </div><a
-                    href="mailto:hello@facreative.co.uk" class="footer-mail"> hello@facreative.co.uk </a><br><br> <a
-                    style="text-decoration:none" target="_blank" href="https://www.linkedin.com/company/fa-creative/">
-                    <img src="d/linkedin.svg" width="50"></a> <a
-                    style="text-decoration:none" target="_blank" href="https://github.com/facreative"> <img
-                        src="d/github.svg" width="50"> </a>
-                <div class="footer-social-icon">
-                    <div class="footer-text">Public liability insurance provided through Simply Business. <br><a
-                            href="https://quote.simplybusiness.co.uk/certificate/policy-overview/DAKmMD7P4ncFNW1ihkv4qg/?source=popBadge"
-                            target="_blank"> View our insurance details</a> <br><br> ©2019 FA Creative &amp;
-                        Technologies Ltd. Company no. 11943931, registered in England and Wales. </div>
-                    <!-- <a href="#!"> <img src="content/images/instagram-icon.png"/> </a> -->
-                </div>
-            </div>
-        </div>
-    </footer>
-    <div id="cookieConsent" style="display: block;"> This website is using cookies. <a
-            href="https://en.wikipedia.org/wiki/HTTP_cookie" target="_blank">More info</a> <a
-            class="cookieConsentOK">That's Fine</a></div>
-    <script type="text/javascript" async="" src="d/analytics.js.download"></script>
-    <script src="d/jquery-3.3.1.min.js.download"></script>
-    <script src="d/main.js.download"></script>
-    <!--<script src='https://media.yubithebot.com/yubi/yubi-generator.js' type='text/javascript'></script><script type="text/javascript">yubi.Run("1cecc50e-cd85-65c3-1664-feafbf0f9282")</script> -->
-    <script async="" src="d/js"></script>
-    <script>window.dataLayer = window.dataLayer || []; function gtag() { dataLayer.push(arguments); } gtag('js', new Date()); gtag('config', 'UA-139931505-1');</script>
-</body>
-
-</html>
+<!DOCTYPE html><html><head> <meta charset="UTF-8"> <meta name="viewport" content="width=device-width, initial-scale=1"> <meta name="description" content="FA Creative"/> <meta property="og:title" content="FA Creative & Technologies Ltd"> <meta property="og:description" content="Let us help you to improve your digital perspectives. Just think about your digital view in world wide web."> <meta property="og:url" content="https://www.facreative.co.uk"> <meta property="og:image" content="https://www.facreative.co.uk/content/images/logo-share.png"/> <meta property="og:type" content="website"/> <meta property="fb:app_id" content="1652823298375162"/><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"><link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png"><link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png"><link rel="manifest" href="/site.webmanifest"><link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5"><meta name="msapplication-TileColor" content="#da532c"><meta name="theme-color" content="#ffffff"> <title>FA Creative & Technologies</title> <link href="https://fonts.googleapis.com/css?family=Muli:400,700&amp;subset=latin-ext" rel="stylesheet"> <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400&amp;subset=latin-ext" rel="stylesheet"> <link rel="stylesheet" href="content/css/main.css"/> <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css"> </head><body> <header class="header"> <div class="content"> <a href="#!" class="logo"> <img src="content/images/logo-share.png" width="100" id="jsLogo"/> </a> <nav class="header-nav"> <a href="#!" class="nav-item" data-target="about">About Us</a> <a href="#!" class="nav-item" data-target="ourworks">Our Works</a> <a href="#!" class="nav-item" data-target="contact">Get in Touch</a> </nav> </div></header> <section class="section" id="first"> <div class="content first-section"> <div class="first-section-left"> <div class="text-box"><h1>FA CREATIVE & TECHNOLOGIES</h1> <div class="hashtag-text">#CREATIVETHINGS</div><div class="big-title"> Let us help you<br/> to improve your<br/> digital perspectives. </div><div class="sub-title">Just think about your digital view in world wide web.</div><a href="mailto:hello@facreative.co.uk" class="link">LET’S DISCUSS</a> </div></div><div class="first-section-right"> <div class="chevron"></div><div class="chevron"></div><div class="chevron"></div></div></div></section> <section class="section " id="second" data-href="about"> <div class="content second-section"> <div class="section-title"> You need a product.<br/> So you need a way guide. </div><div class="second-column-box"> <div class="second-item-box"> <img src="content/images/second-icon-1.png"/> <div class="second-item-title"> Meet our services. </div><div class="second-item-desc"> Every product we created increases<br/> durability, quality, availability and yet<br/> decreases all costs. Just one step<br/> forward. </div></div><div class="second-item-box"> <img src="content/images/second-icon-3.png"/> <div class="second-item-title"> Do you need any asistance? </div><div class="second-item-desc"> We know how to do so with our best<br/> practices and the speed our finger-<br/> print keepsakes are crafted.<br/><br/> Ah yes, we do it. </div></div><div class="second-item-box"> <img src="content/images/second-icon-2.png"/> <div class="second-item-title">Improvement is welcome</div><div class="second-item-desc"> You already have a project and <br/> need any improvement? Ah okay,<br/> let’s do it right now!<br/><br/> Let’s see the sun rise! </div></div></div></div></section> <section class="section fp-auto-height" id="third" data-href="ourworks"> <div class="content third-section"> <div class="third-title"> What we have done for<br/> our precious friends. </div><div class="third-item-box"> <a href="https://www.yubithebot.com/en" target="_blank" class="third-item"> <img src="content/images/yubi.png"/> <div class="third-item-mask">Conversational Interfaces</div></a> <a href="#!" class="third-item"> <img src="content/images/third-item-2.png"/> <div class="third-item-mask">Native Application</div></a> <a href="#!" class="third-item"> <img src="content/images/third-item-3.png"/> <div class="third-item-mask">Printing</div></a> <a href="#!" class="third-item"> <img src="content/images/third-item-4.png"/> <div class="third-item-mask">Logo Design</div></a> </div></div></section> <footer class="footer section" data-href="contact"> <div class="content"> <div class="footer-title"> Tell us your needs.<br/> We’d like to know and help you. </div><div class="footer-desc"> We have hard-working instincts to find the beyond of the best.Imagine the most usable<br/> and yet the most rock-solid mobile application: We are building it naturally </div><a href="mailto:hello@facreative.co.uk" class="footer-link">Write Us</a> </div><div class="footer-seperator"></div><div class="content"> <div class="footer-bottom"> <div class="footer-company-name"> FA Creative & Technologies </div><div class="footer-address"> 3rd Floor 86-90 Paul Street, <br/>London EC2A 4NE </div><a href="mailto:hello@facreative.co.uk" class="footer-mail"> hello@facreative.co.uk </a><br/><br/> <a style="text-decoration:none" target="_blank" href="https://www.linkedin.com/company/fa-creative/"> <img src="content/images/linkedin.svg" width="50"/></a> <a style="text-decoration:none" target="_blank" href="https://github.com/facreative"> <img src="content/images/github.svg" width="50"/> </a> <div class="footer-social-icon"> <div class="footer-text">Public liability insurance provided through Simply Business. <br/><a href='https://quote.simplybusiness.co.uk/certificate/policy-overview/DAKmMD7P4ncFNW1ihkv4qg/?source=popBadge' target="_blank"> View our insurance details</a> <br/><br/> ©2019 FA Creative & Technologies Ltd. Company no. 11943931, registered in England and Wales. </div><!-- <a href="#!"> <img src="content/images/instagram-icon.png"/> </a> --> </div></div></div></footer><div id="cookieConsent"> This website is using cookies. <a href="https://en.wikipedia.org/wiki/HTTP_cookie" target="_blank">More info</a> <a class="cookieConsentOK">That's Fine</a></div><script src="content/js/jquery-3.3.1.min.js"></script> <script src="content/js/main.js"></script><!--<script src='https://media.yubithebot.com/yubi/yubi-generator.js' type='text/javascript'></script><script type="text/javascript">yubi.Run("1cecc50e-cd85-65c3-1664-feafbf0f9282")</script> --><script async src="https://www.googletagmanager.com/gtag/js?id=UA-139931505-1"></script><script>window.dataLayer=window.dataLayer || []; function gtag(){dataLayer.push(arguments);}gtag('js', new Date()); gtag('config', 'UA-139931505-1');</script></body></html>
